mobile nav menu calude

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700;800&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Overlay -->
+    <div class="nav-overlay"></div>
 
     <header class="main-header">
         <div class="container header-container">
@@ -48,7 +50,7 @@
                 </div>
                 <h2>This is the spark that, when honored, unlocks your fullest potential.</h2>
                 <p class="hero-body">
-                    Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you’ll find what each value means for your choices, relationships, and future direction.
+                    Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you'll find what each value means for your choices, relationships, and future direction.
                 </p>
                 <p class="bridge-cta">
                     Knowing your values is powerful. <strong>Living them daily is transformational.</strong>
@@ -75,7 +77,7 @@
                             <span class="accordion-icon">+</span>
                         </div>
                         <div class="accordion-content">
-                            <p>Learn to map your full hierarchy of values so you can see what’s been driving your choices all along, giving you a powerful foundation for change.</p>
+                            <p>Learn to map your full hierarchy of values so you can see what's been driving your choices all along, giving you a powerful foundation for change.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
@@ -120,7 +122,7 @@
                     <h2>Meet Your Guide, Jonathan M. Keim</h2>
                     <p>As the Chief Development Officer at <strong>Robbins-Madanes Training</strong> (Tony Robbins' official school for life coaches), Jonathan has spent over a decade uncovering the keys to lasting transformation.</p>
                     <blockquote>
-                        "This book is the culmination of 10 years of research into what it truly takes to create a life of purpose. It’s not just theory—it’s the roadmap."
+                        "This book is the culmination of 10 years of research into what it truly takes to create a life of purpose. It's not just theory—it's the roadmap."
                     </blockquote>
                     <p>He blends a deep legacy of human behavior with practical, modern strategies that have shaped thousands of coaches and leaders worldwide.</p>
                 </div>
@@ -146,14 +148,14 @@
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                         </div>
                         <h3>Action Over Inspiration</h3>
-                        <p>Includes journal prompts and real-time tools you’ll actually use in your life—not just "aha" moments that fade.</p>
+                        <p>Includes journal prompts and real-time tools you'll actually use in your life—not just "aha" moments that fade.</p>
                     </div>
                     <div class="tile">
                         <div class="tile-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" /></svg>
                         </div>
                         <h3>Rooted in You</h3>
-                        <p>This isn’t a generic formula. It starts with your unique quiz results to help you build from what’s true for you.</p>
+                        <p>This isn't a generic formula. It starts with your unique quiz results to help you build from what's true for you.</p>
                     </div>
                 </div>
             </div>
@@ -193,32 +195,32 @@
         <section class="social-proof">
             <div class="section-header">
                 <span class="pre-headline">REAL REACTIONS</span>
-                <h2>Here’s What People Said After Just the Quiz…</h2>
+                <h2>Here's What People Said After Just the Quiz…</h2>
             </div>
             <div class="testimonial-slider-container">
                 <div class="testimonial-slider">
                     <div class="testimonial-card">
-                        <p>“I finally have words for what actually matters to me. This felt like coming home to myself.”</p>
+                        <p>"I finally have words for what actually matters to me. This felt like coming home to myself."</p>
                         <span>- Sarah J.</span>
                     </div>
                     <div class="testimonial-card">
-                        <p>“It’s the first thing that made me feel like I wasn’t broken—just misaligned. So empowering.”</p>
+                        <p>"It's the first thing that made me feel like I wasn't broken—just misaligned. So empowering."</p>
                         <span>- Michael B.</span>
                     </div>
                     <div class="testimonial-card">
-                        <p>“This quiz was more insightful than hours of journaling. It gave me a clear starting point.”</p>
+                        <p>"This quiz was more insightful than hours of journaling. It gave me a clear starting point."</p>
                         <span>- Emily R.</span>
                     </div>
                     <div class="testimonial-card">
-                        <p>“I finally have words for what actually matters to me. This felt like coming home to myself.”</p>
+                        <p>"I finally have words for what actually matters to me. This felt like coming home to myself."</p>
                         <span>- Sarah J.</span>
                     </div>
                     <div class="testimonial-card">
-                        <p>“It’s the first thing that made me feel like I wasn’t broken—just misaligned. So empowering.”</p>
+                        <p>"It's the first thing that made me feel like I wasn't broken—just misaligned. So empowering."</p>
                         <span>- Michael B.</span>
                     </div>
                     <div class="testimonial-card">
-                        <p>“This quiz was more insightful than hours of journaling. It gave me a clear starting point.”</p>
+                        <p>"This quiz was more insightful than hours of journaling. It gave me a clear starting point."</p>
                         <span>- Emily R.</span>
                     </div>
                 </div>
@@ -272,13 +274,71 @@
             });
         });
         
-        // --- SCRIPT FOR MOBILE NAVIGATION ---
-        const navToggle = document.querySelector('.mobile-nav-toggle');
-        const navMenu = document.querySelector('.nav-menu');
+        // --- FIXED MOBILE NAVIGATION SCRIPT ---
+        document.addEventListener('DOMContentLoaded', function() {
+            const navToggle = document.querySelector('.mobile-nav-toggle');
+            const navMenu = document.querySelector('.nav-menu');
+            const navOverlay = document.querySelector('.nav-overlay');
+            const navLinks = document.querySelectorAll('.nav-menu a');
+            const body = document.body;
 
-        navToggle.addEventListener('click', function() {
-            navMenu.classList.toggle('active');
-            navToggle.classList.toggle('active');
+            // Function to open the menu
+            function openMenu() {
+                navMenu.classList.add('active');
+                navToggle.classList.add('active');
+                navOverlay.classList.add('active');
+                body.classList.add('no-scroll');
+            }
+
+            // Function to close the menu
+            function closeMenu() {
+                navMenu.classList.remove('active');
+                navToggle.classList.remove('active');
+                navOverlay.classList.remove('active');
+                body.classList.remove('no-scroll');
+            }
+
+            // Function to toggle the menu
+            function toggleMenu() {
+                if (navMenu.classList.contains('active')) {
+                    closeMenu();
+                } else {
+                    openMenu();
+                }
+            }
+
+            // Event listener for the hamburger button
+            if (navToggle) {
+                navToggle.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    e.stopPropagation();
+                    toggleMenu();
+                });
+            }
+
+            // Event listener for the overlay to close menu when clicked
+            if (navOverlay) {
+                navOverlay.addEventListener('click', closeMenu);
+            }
+
+            // Event listeners for each menu link to close the menu on click
+            navLinks.forEach(link => {
+                link.addEventListener('click', closeMenu);
+            });
+
+            // Close menu when pressing Escape key
+            document.addEventListener('keydown', function(e) {
+                if (e.key === 'Escape' && navMenu.classList.contains('active')) {
+                    closeMenu();
+                }
+            });
+
+            // Close menu if window is resized to desktop size
+            window.addEventListener('resize', function() {
+                if (window.innerWidth > 992 && navMenu.classList.contains('active')) {
+                    closeMenu();
+                }
+            });
         });
     </script>
 
