--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="#" class="logo-link">Power Values</a>
+                <a href="#" class="logo-link">
+                    <img src="images/logo.svg" alt="Power Values" class="logo-image">
+                </a>
             </div>
             <nav class="nav">
                 <div class="menu-toggle" id="menu-toggle">
