--- a/index.html
+++ b/index.html
@@ -47,7 +47,28 @@
             <div class="container hero-container-new">
                 <div class="value-certificate">
                     <h1>Your #1 Power Value is… <span id="value1-display">[VALUE]</span></h1>
-                </div>
+
+                    <div class="social-share-container">
+                        <p class="share-prompt">Share Your Result:</p>
+                        <div class="share-buttons">
+                            <a href="#" class="social-share-btn twitter" aria-label="Share on Twitter">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                                </svg>
+                            </a>
+                            <a href="#" class="social-share-btn facebook" aria-label="Share on Facebook">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" />
+                                </svg>
+                            </a>
+                            <a href="#" class="social-share-btn linkedin" aria-label="Share on LinkedIn">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 114.75 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-2.16-1.76-2.16-1.28 0-1.76.91-1.76 2.16V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.1 1.04 3.1 3.45z" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    </div>
                 <h2>This is the spark that, when honored, unlocks your fullest potential.</h2>
                 <p class="hero-body">
                     Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you'll find what each value means for your choices, relationships, and future direction.
