--- a/index.html
+++ b/index.html
@@ -21,23 +21,28 @@
                     <img src="images/logo.svg" alt="Power Values" class="logo-image">
                 </a>
             </div>
-            <nav class="nav">
-                <div class="menu-toggle" id="menu-toggle">
-                    <span class="menu-icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
+            <div class="header-actions">
+                <nav class="nav">
+                    <div class="menu-toggle" id="menu-toggle">
+                        <span class="menu-icon">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <ul class="nav-menu" id="nav-menu">
+                        <li><a href="#" class="nav-link">Home</a></li>
+                        <li><a href="#" class="nav-link">Call</a></li>
+                        <li><a href="#cta" class="nav-link nav-link-active">Book</a></li>
+                        <li><a href="#" class="nav-link">Training</a></li>
+                        <li><a href="#" class="nav-link">Quiz</a></li>
+                        <li><a href="#" class="nav-link">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header-cta">
+                    <a href="#cta" class="button button-small">Get The Book</a>
                 </div>
-                <ul class="nav-menu" id="nav-menu">
-                    <li><a href="#" class="nav-link">Home</a></li>
-                    <li><a href="#" class="nav-link">Call</a></li>
-                    <li><a href="#" class="nav-link">Book</a></li>
-                    <li><a href="#" class="nav-link">Training</a></li>
-                    <li><a href="#" class="nav-link">Quiz</a></li>
-                    <li><a href="#" class="nav-link">Contact</a></li>
-                </ul>
-            </nav>
+            </div>
         </div>
     </header>
     
