--- a/index.html
+++ b/index.html
@@ -225,31 +225,23 @@
                 </div>
                 <div class="options-flex">
                     <div class="option-box animate-on-scroll">
-                        <div class="bonus-badge">Limited-Time Bonus!</div>
                         <span class="option-tag">Instant Access</span>
                         <h3>PDF Edition + Workbook</h3>
                         <ul>
-                            <li>✓ Instant Download</li>
-                            <li>✓ Bonus "Values-to-Action" Worksheet</li>
-                            <li>✓ Read on any device</li>
+                            <li>Instant Download</li>
+                            <li>Bonus "Values-to-Action" Worksheet</li>
+                            <li>Read on any device</li>
                         </ul>
-                        <div class="bonus-offer">
-                            <strong>Includes:</strong> The 3-Day Values Alignment video course (a $49 value) FREE.
-                        </div>
                         <a href="#" class="button">Download Now</a>
                     </div>
                     <div class="option-box animate-on-scroll">
-                        <div class="bonus-badge">Limited-Time Bonus!</div>
                         <span class="option-tag">Most Popular</span>
                         <h3>Amazon Print Edition</h3>
                         <ul>
-                            <li>✓ High-Quality Paperback</li>
-                            <li>✓ Perfect for highlighting & notes</li>
-                            <li>✓ Delivered to your door</li>
+                            <li>High-Quality Paperback</li>
+                            <li>Perfect for highlighting & notes</li>
+                            <li>Delivered to your door</li>
                         </ul>
-                        <div class="bonus-offer">
-                            <strong>Includes:</strong> The 3-Day Values Alignment video course (a $49 value) FREE.
-                        </div>
                         <a href="#" class="button button-secondary">Order on Amazon</a>
                     </div>
                 </div>
