--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <h2>Look Inside The Book</h2>
                 </div>
                 <div class="preview-container animate-on-scroll">
-                    <img src="https://i.imgur.com/7g292G4.png" alt="Preview of the book's Table of Contents">
-                    <img src="https://i.imgur.com/G20gA5u.png" alt="Preview of a diagram from the book">
-                    <img src="https://i.imgur.com/9a5n7m5.png" alt="Preview of a chapter page from the book">
+                    <img src="images/preview-a.png" alt="Preview of the book's Table of Contents">
+                    <img src="images/preview-b.png" alt="Preview of a diagram from the book">
+                    <img src="images/preview-c.png" alt="Preview of a chapter page from the book">
                 </div>
             </div>
         </section>
