--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <div class="modal-overlay" id="flipbook-modal">
         <span class="modal-close" id="close-flipbook">&times;</span>
         <div class="modal-content">
-            <iframe id="flipbook-iframe" src="" frameborder="0" allowfullscreen></iframe>
+            <iframe id="flipbook-iframe" src="" title="Power Values Book Preview" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
