--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                             <a href="#" class="social-share-btn linkedin" aria-label="Share on LinkedIn">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 114.75 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-2.16-1.76-2.16-1.28 0-1.76.91-1.76 2.16V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.1 1.04 3.1 3.45z" /></svg>
                             </a>
+                            <a href="#" class="social-share-btn instagram" aria-label="Share on Instagram">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.585-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.585-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.585.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.415 2.175 8.796 2.163 12 2.163zm0 1.802c-3.141 0-3.505.01-4.73.066-2.618.119-3.714 1.214-3.833 3.833-.056 1.224-.066 1.588-.066 4.73s.01 3.505.066 4.73c.119 2.618 1.214 3.714 3.833 3.833 1.224.056 1.588.066 4.73.066s3.505-.01 4.73-.066c2.618-.119 3.714-1.214 3.833-3.833.056-1.224.066-1.588.066-4.73s-.01-3.505-.066-4.73c-.119-2.618-1.214-3.714-3.833-3.833-1.224-.056-1.588-.066-4.73-.066zm0 4.488c-1.929 0-3.488 1.56-3.488 3.488s1.56 3.488 3.488 3.488 3.488-1.56 3.488-3.488-1.56-3.488-3.488-3.488zm0 5.174c-1.022 0-1.852-.83-1.852-1.852s.83-1.852 1.852-1.852 1.852.83 1.852 1.852-.83 1.852-1.852 1.852zm4.332-5.228c-.512 0-.927.415-.927.927s.415.927.927.927.927-.415.927-.927-.415-.927-.927-.927z"/></svg>
+                            </a>
+                            <a href="#" class="social-share-btn tiktok" aria-label="Share on TikTok">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.2 5.9v2.6c-2.3.1-4.2-.8-5.3-2.3v7.4c0 4.1-3.4 7.4-7.4 7.4-4.1 0-7.4-3.4-7.4-7.4S5.4 6.2 9.5 6.2c.5 0 1 .1 1.5.2v2.5c-.5-.1-1-.2-1.5-.2-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9 4.9-2.2 4.9-4.9v-9c1.3-1.8 3.4-2.9 5.8-2.9.1 0 .2 0 .3.0z"/></svg>
+                            </a>
                         </div>
                     </div>
                     <a href="#" class="button button-secondary button-small">Download Certificate</a>
@@ -100,7 +106,7 @@
         <section class="learn-experience">
             <div class="container">
                 <div class="section-header animate-on-scroll">
-                    <span class="pre-headline">FROM INSIGHT TO ACTION</span>
+                    <span class="pre-headline">The Promise</span>
                     <h2>“Clarity Isn’t Enough. Application Changes Everything.”</h2>
                     <p>The quiz showed you <em>what</em> your values are. This book shows you <em>how to live them</em>. Inside, you’ll learn how to:</p>
                 </div>
@@ -108,42 +114,42 @@
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-card-header">
                             <span class="feature-card-chapter">Ch. 2</span>
-                            <h3>Map Your Hierarchy</h3>
+                            <h3>Map your full hierarchy of values</h3>
                         </div>
-                        <p>See what’s been driving your choices all along by mapping your full hierarchy of values.</p>
+                        <p>so you can see what’s been driving your choices all along.</p>
                     </div>
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-card-header">
                             <span class="feature-card-chapter">Ch. 4</span>
-                            <h3>Build Your Compass</h3>
+                            <h3>Build your Power Values Compass</h3>
                         </div>
-                        <p>Get a real-time tool to cut through confusion and make clear, confident decisions.</p>
+                        <p>a tool to cut through confusion and make clear decisions.</p>
                     </div>
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-card-header">
                             <span class="feature-card-chapter">Ch. 5</span>
-                            <h3>Interrupt Burnout</h3>
+                            <h3>Interrupt burnout cycles</h3>
                         </div>
-                        <p>Break draining patterns by aligning your professional achievements with personal fulfillment.</p>
+                        <p>by aligning achievement with fulfillment.</p>
                     </div>
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-card-header">
                             <span class="feature-card-chapter">Ch. 6</span>
-                            <h3>Replace Patterns</h3>
+                            <h3>Replace draining patterns</h3>
                         </div>
-                        <p>Systematically swap draining habits with energizing actions rooted in your true values.</p>
+                        <p>with energizing actions rooted in your true values.</p>
                     </div>
                      <div class="feature-card animate-on-scroll">
                         <div class="feature-card-header">
                             <span class="feature-card-chapter">Ch. 7</span>
-                            <h3>Embody Your Future</h3>
+                            <h3>Visualize and embody your Future Self</h3>
                         </div>
-                        <p>Visualize and step into your Future Self, leading with confidence, peace, and purpose.</p>
+                        <p>so you lead with confidence, peace, and purpose.</p>
                     </div>
                     <div class="feature-card feature-card-cta animate-on-scroll">
                          <h3>Ready to start?</h3>
                          <p>Turn these insights into your reality.</p>
-                         <a href="#cta" class="button">Start Living My Values</a>
+                         <a href="#cta" class="button">Start Living My Power Values</a>
                     </div>
                 </div>
             </div>
@@ -170,6 +176,7 @@
         <section class="experience-outcomes">
             <div class="container">
                 <div class="section-header animate-on-scroll">
+                    <span class="pre-headline">WHAT YOU’LL EXPERIENCE</span>
                     <h2>“What Changes When You Apply Power Values”</h2>
                 </div>
                 <div class="animate-on-scroll">
@@ -198,7 +205,6 @@
         <section class="differentiators">
             <div class="container">
                 <div class="section-header animate-on-scroll">
-                    <span class="pre-headline">NOT JUST ANOTHER BOOK</span>
                     <h2>“Why <em>Power Values</em> Is Different From Other Personal Growth Books”</h2>
                 </div>
                 <div class="tiles">
@@ -206,15 +212,15 @@
                         <div class="tile-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 6.75V15m6-6v8.25m.503-8.485l-6.252 6.252M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                         </div>
-                        <h3>Framework, Not Fluff</h3>
-                        <p>Born from methodologies used to train 15,000+ coaches worldwide, this system is built to be applied, not just read.</p>
+                        <h3>A Framework, Not Fluff</h3>
+                        <p>Born from training 15,000+ coaches worldwide — built to be applied, not just read.</p>
                     </div>
                     <div class="tile animate-on-scroll">
                         <div class="tile-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                         </div>
                         <h3>Action Over Inspiration</h3>
-                        <p>Includes journal prompts and real-time tools you'll actually use in your life—not just "aha" moments that fade.</p>
+                        <p>Exercises, prompts, and tools you’ll use in real time — not just “aha” moments.</p>
                     </div>
                     <div class="tile animate-on-scroll">
                         <div class="tile-icon">
@@ -263,58 +269,45 @@
 
         <section class="social-proof">
             <div class="section-header animate-on-scroll">
-                <span class="pre-headline">REAL REACTIONS</span>
-                <h2>Here's What People Said After Just the Quiz…</h2>
+                <h2>Here’s What People Said After Just the Quiz…</h2>
             </div>
             <p class="credibility-stat animate-on-scroll">⭐️⭐️⭐️⭐️⭐️ Over 1,000 people have already begun their Power Values journey</p>
             <div class="testimonial-slider-container">
                 <div class="testimonial-slider">
                     <div class="testimonial-card">
-                        <p>"I finally have words for what actually matters to me. This felt like coming home to myself."</p>
+                        <p>"I finally have words for what actually matters to me."</p>
                         <div class="testimonial-author">
                             <span>- Sarah J.</span>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>"It's the first thing that made me feel like I wasn't broken—just misaligned. So empowering."</p>
+                        <p>"This made me feel seen and strong again."</p>
                         <div class="testimonial-author">
                             <span>- Michael B.</span>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>“This made me feel seen and strong again.”</p>
+                        <p>“I’m not broken — just misaligned.”</p>
                         <div class="testimonial-author">
                             <span>- Jessica L.</span>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>"This quiz was more insightful than hours of journaling. It gave me a clear starting point."</p>
-                        <div class="testimonial-author">
-                            <span>- Emily R.</span>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <p>"I finally have words for what actually matters to me. This felt like coming home to myself."</p>
+                        <p>"I finally have words for what actually matters to me."</p>
                          <div class="testimonial-author">
                             <span>- Sarah J.</span>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>"It's the first thing that made me feel like I wasn't broken—just misaligned. So empowering."</p>
+                        <p>"This made me feel seen and strong again."</p>
                         <div class="testimonial-author">
                             <span>- Michael B.</span>
                         </div>
                     </div>
                      <div class="testimonial-card">
-                        <p>“This made me feel seen and strong again.”</p>
+                        <p>“I’m not broken — just misaligned.”</p>
                         <div class="testimonial-author">
                             <span>- Jessica L.</span>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <p>"This quiz was more insightful than hours of journaling. It gave me a clear starting point."</p>
-                        <div class="testimonial-author">
-                            <span>- Emily R.</span>
                         </div>
                     </div>
                 </div>
@@ -327,22 +320,22 @@
         <section class="final-close">
             <div class="container animate-on-scroll">
                 <h2>“You’ve Discovered Your Power Values. Now Learn to Live Them.”</h2>
-                <p>Awareness is the first step, but transformation happens when you apply what you’ve learned. This book gives you the exact framework to:</p>
+                <p class="final-close-body">Awareness is the first step. But transformation happens when you apply what you’ve learned. This book gives you the exact framework, tools, and prompts to:</p>
                 <div class="final-close-grid">
                      <div class="final-close-card">
                         <div class="tile-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" /></svg></div>
-                        <h3>Make Better Decisions</h3>
+                        <h3>Make better decisions.</h3>
                     </div>
                     <div class="final-close-card">
                        <div class="tile-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.362-3.362z" /></svg></div>
-                        <h3>End Cycles of Burnout</h3>
+                        <h3>End cycles of burnout.</h3>
                     </div>
                      <div class="final-close-card">
                         <div class="tile-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.572L16.5 21.75l-.398-1.178a3.375 3.375 0 00-2.456-2.456L12.5 18l1.178-.398a3.375 3.375 0 002.456-2.456L16.5 14.25l.398 1.178a3.375 3.375 0 002.456 2.456L20.5 18l-1.178.398a3.375 3.375 0 00-2.456 2.456z" /></svg></div>
-                        <h3>Live with Purpose</h3>
+                        <h3>Live with clarity, confidence, and purpose.</h3>
                     </div>
                 </div>
-                <p>Imagine looking back a year from now and realizing this was the day you stopped drifting and started living aligned. 👉 Take the next step now.</p>
+                <p class="final-close-body">Imagine looking back a year from now and realizing this was the day you stopped drifting and started living aligned.<br>👉 Take the next step now.</p>
                 <a href="#cta" class="button button-large">📖 Get the Book Today</a>
                 <span class="guarantee-text">Backed by a 100% satisfaction guarantee.</span>
             </div>
@@ -367,6 +360,15 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                          <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 114.75 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-2.16-1.76-2.16-1.28 0-1.76.91-1.76 2.16V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.1 1.04 3.1 3.45z" />
                     </svg>
+                </a>
+                <a href="#" class="footer-social-link" aria-label="Instagram">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.585-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.585-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.585.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.415 2.175 8.796 2.163 12 2.163zm0 1.802c-3.141 0-3.505.01-4.73.066-2.618.119-3.714 1.214-3.833 3.833-.056 1.224-.066 1.588-.066 4.73s.01 3.505.066 4.73c.119 2.618 1.214 3.714 3.833 3.833 1.224.056 1.588.066 4.73.066s3.505-.01 4.73-.066c2.618-.119 3.714-1.214 3.833-3.833.056-1.224.066-1.588.066-4.73s-.01-3.505-.066-4.73c-.119-2.618-1.214-3.714-3.833-3.833-1.224-.056-1.588-.066-4.73-.066zm0 4.488c-1.929 0-3.488 1.56-3.488 3.488s1.56 3.488 3.488 3.488 3.488-1.56 3.488-3.488-1.56-3.488-3.488-3.488zm0 5.174c-1.022 0-1.852-.83-1.852-1.852s.83-1.852 1.852-1.852 1.852.83 1.852 1.852-.83 1.852-1.852 1.852zm4.332-5.228c-.512 0-.927.415-.927.927s.415.927.927.927.927-.415.927-.927-.415-.927-.927-.927z"/></svg>
+                </a>
+                <a href="#" class="footer-social-link" aria-label="TikTok">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.2 5.9v2.6c-2.3.1-4.2-.8-5.3-2.3v7.4c0 4.1-3.4 7.4-7.4 7.4-4.1 0-7.4-3.4-7.4-7.4S5.4 6.2 9.5 6.2c.5 0 1 .1 1.5.2v2.5c-.5-.1-1-.2-1.5-.2-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9 4.9-2.2 4.9-4.9v-9c1.3-1.8 3.4-2.9 5.8-2.9.1 0 .2 0 .3.0z"/></svg>
+                </a>
+                <a href="#" class="footer-social-link" aria-label="YouTube">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M21.582,6.186c-0.23-0.86-0.908-1.538-1.768-1.768C18.267,4,12,4,12,4S5.733,4,4.186,4.418 c-0.86,0.23-1.538,0.908-1.768,1.768C2,7.733,2,12,2,12s0,4.267,0.418,5.814c0.23,0.86,0.908,1.538,1.768,1.768 C5.733,20,12,20,12,20s6.267,0,7.814-0.418c0.861-0.23,1.538-0.908,1.768-1.768C22,16.267,22,12,22,12S22,7.733,21.582,6.186z M10,15.464V8.536L16,12L10,15.464z"/></svg>
                 </a>
             </div>
             <p class="footer-copy">&copy; 2025 Jonathan M. Keim. All Rights Reserved. | Power Values</p>
